# magic-pin-final-submission

./: .env.example  .gitignore  Dockerfile  README.md  bot.py  pyproject.toml  render.yaml  requirements.txt  submission.jsonl
challenge/: judge_simulator.py
prompts/: composer_v1.md
src/magicpin_bot/: config.py
src/magicpin_bot/api/: app.py
src/magicpin_bot/domain/: models.py
src/magicpin_bot/engines/: challenge_composer.py  composer.py  context_tools.py  conversation.py  decision.py  evaluator.py  gemini.py  reply.py
src/magicpin_bot/services/: context_store.py
tests/: __init__.py  conftest.py  test_api_contract.py  test_reply_engine.py
