[project]
name = "vedant-merchant-assist"
version = "1.0.0"
description = "Custom deterministic merchant engagement bot for the magicpin AI assessment"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "redis>=5.0.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
